# mkdocs-stlite

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/mkdocs_stlite/: __init__.py
