[project]
name = "mkdocs-stlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
]

[project.entry-points."mkdocs.plugins"]
stlite = "mkdocs_stlite:StlitePlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
